[gd_scene load_steps=14 format=3 uid="uid://cqdfwljyhchom"]

[ext_resource type="Script" uid="uid://cctw8cl7me5or" path="res://modules/editor/gui/levelprop_tab_container.gd" id="1_3dgca"]
[ext_resource type="FontFile" uid="uid://dp5kktxwel3a5" path="res://engine/components/hud/hud_font_mono.fnt" id="1_d43nb"]
[ext_resource type="Texture2D" uid="uid://dserx5bbstx0g" path="res://modules/editor/icons/Add.svg" id="3_7vdsl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rvs6x"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.17, 0.17, 0.17, 1)
corner_detail = 1

[sub_resource type="Gradient" id="Gradient_4mqjo"]
colors = PackedColorArray(0.354, 0.24, 1, 1, 0.952941, 0.952941, 0.952941, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3dgca"]
gradient = SubResource("Gradient_4mqjo")
width = 100
height = 100
fill_to = Vector2(0, 1)

[sub_resource type="FontVariation" id="FontVariation_qbemb"]
variation_embolden = 0.6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vdsl"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.13, 0.13, 0.13, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxe25"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.1, 0.1, 0.1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbemb"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00ji5"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.2, 0.2, 0.2, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_00ji5"]
size = Vector2(0, 0)

[sub_resource type="ButtonGroup" id="ButtonGroup_4hs8t"]

[node name="PropertiesTabs" type="TabContainer"]
custom_minimum_size = Vector2(56, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
tab_focus_mode = 1
script = ExtResource("1_3dgca")

[node name="Main" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rvs6x")
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main/HBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Main/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Time Limit:"

[node name="TimeLimit" type="SpinBox" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
min_value = -1.0
max_value = 99999.0
value = 360.0
rounded = true

[node name="HBoxContainer6" type="HBoxContainer" parent="Main/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Display Name:"

[node name="PanelContainer" type="PanelContainer" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer6/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DisplayName1" type="LineEdit" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer6/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../DisplayName2")
focus_next = NodePath("../DisplayName2")
focus_mode = 1
theme_override_colors/font_color = Color(0.99, 0.99, 0.99, 1)
theme_override_fonts/font = ExtResource("1_d43nb")
text = "WORLD"
placeholder_text = "LINE 1"
alignment = 1
max_length = 15
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false
flat = true

[node name="DisplayName2" type="LineEdit" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer6/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../DisplayName1")
focus_previous = NodePath("../DisplayName1")
focus_mode = 1
theme_override_colors/font_color = Color(0.99, 0.99, 0.99, 1)
theme_override_fonts/font = ExtResource("1_d43nb")
text = "1-1"
placeholder_text = "LINE 2"
alignment = 1
max_length = 15
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Main/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label2" type="Label" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Level Name:"

[node name="LevelName" type="LineEdit" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
text = "New Level"
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="Label" type="Label" parent="Main/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Description:"

[node name="LevelDescription" type="TextEdit" parent="Main/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
focus_mode = 1
text = "The newest best level?"

[node name="HBoxContainer3" type="HBoxContainer" parent="Main/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label3" type="Label" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Level Author:"

[node name="LevelAuthor" type="LineEdit" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
text = "You"
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="HBoxContainer4" type="HBoxContainer" parent="Main/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label3" type="Label" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Author E-mail:"

[node name="AuthorEmail" type="LineEdit" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="HBoxContainer5" type="HBoxContainer" parent="Main/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label3" type="Label" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Author Website:"

[node name="AuthorWebsite" type="LineEdit" parent="Main/HBoxContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="Background" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rvs6x")
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="GradientTop" type="ColorPickerButton" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
text = " "
color = Color(0.352941, 0.239216, 1, 1)
edit_alpha = false

[node name="Label" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/GradientTop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 6
text = "Top"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GradientBottom" type="ColorPickerButton" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
text = " "
color = Color(0.952941, 0.952941, 0.952941, 1)
edit_alpha = false

[node name="Label" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/GradientBottom"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 6
text = "Bottom"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Background/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_3dgca")
stretch_mode = 2

[node name="Sections" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rvs6x")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Sections"]
layout_mode = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="Sections/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Sections/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Select a section:"

[node name="SectionSelectors" type="HBoxContainer" parent="Sections/VBoxContainer/HBoxContainer6"]
layout_mode = 2

[node name="Section1" type="CheckBox" parent="Sections/VBoxContainer/HBoxContainer6/SectionSelectors"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_qbemb")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vdsl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qxe25")
theme_override_styles/hover = SubResource("StyleBoxFlat_qbemb")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_00ji5")
theme_override_icons/checked = SubResource("PlaceholderTexture2D_00ji5")
theme_override_icons/unchecked = SubResource("PlaceholderTexture2D_00ji5")
theme_override_icons/radio_checked = SubResource("PlaceholderTexture2D_00ji5")
theme_override_icons/radio_unchecked = SubResource("PlaceholderTexture2D_00ji5")
theme_override_icons/checked_disabled = SubResource("PlaceholderTexture2D_00ji5")
theme_override_icons/unchecked_disabled = SubResource("PlaceholderTexture2D_00ji5")
theme_override_icons/radio_checked_disabled = SubResource("PlaceholderTexture2D_00ji5")
theme_override_icons/radio_unchecked_disabled = SubResource("PlaceholderTexture2D_00ji5")
button_pressed = true
button_group = SubResource("ButtonGroup_4hs8t")
text = "1"

[node name="AddButton" type="Button" parent="Sections/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
icon = ExtResource("3_7vdsl")
icon_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Sections/VBoxContainer"]
layout_mode = 2
